[package]
name = "rust-neofetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciifyer = "0.1.1"
comfy-table = "7.1.0"
reqwest = { version = "0.12.2", features = ["blocking"] }
sysinfo = "0.30.7"
